--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "dependencies": {
     "jquery": "^2.2.1",
+    "lodash": "^4.8.2",
     "vue": "^1.0.17",
     "vue-class-component": "^3.2.0",
     "vue-router": "^0.7.11"
