--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "webpack": "^1.12.14"
   },
   "dependencies": {
+    "dateformat": "^1.0.12",
     "jquery": "^2.2.1",
     "lodash": "^4.8.2",
     "vue": "^1.0.17",
