--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "dateformat": "^1.0.12",
     "jquery": "^2.2.1",
     "lodash": "^4.8.2",
+    "sqlite3": "^3.1.3",
     "vue": "^1.0.17",
     "vue-class-component": "^3.2.0",
     "vue-router": "^0.7.11"
