--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "CC0 1.0 Universal",
+  "license": "CC0-1.0",
   "devDependencies": {
     "del": "^2.2.0",
     "electron-packager": "^5.2.1",
