--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "devDependencies": {
     "del": "^2.2.0",
     "electron-packager": "^8.0.0",
-    "electron-prebuilt": "^1.1.1",
+    "electron-prebuilt": "^1.4.1",
+    "electron-rebuild": "^1.2.1",
     "gulp": "^3.9.1",
     "gulp-sass": "^2.2.0",
     "gulp-typescript": "^2.12.1",
@@ -23,6 +24,7 @@
     "dateformat": "^1.0.12",
     "jquery": "^3.1.0",
     "lodash": "^4.8.2",
+    "nodobjc": "^2.1.0",
     "sqlite3": "^3.1.3",
     "vue": "^1.0.17",
     "vue-class-component": "^3.2.0",
